All controller tournament tests